--- a/client/index.html
+++ b/client/index.html
@@ -52,6 +52,10 @@
                 }, 3000);
             }
         });
+
+        socket.on('nueva_venta', (msg) => {
+            console.log(msg);
+        });
     </script>
 
     <style>
